[package]
name = "robson_compiler"
version = "0.1.6"
edition = "2021"
description = "Dependency of the robson cli"
license = "MIT"
repository = "https://github.com/gabireugabiru/RobsonCompiler"
homepage = "https://robson.fly.dev"

[dependencies]
getrandom = { version = "*", features = ["js"] }
rand = "0.8.5"

[profile.release]
panic = "abort"
